# agent-skills

./: .changie.yaml  .gitignore  .golangci.yaml  .goreleaser.yaml  .lycheecache  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  go.work  go.work.sum  lefthook.yml  pyproject.toml
.changes/: 0.10.0.md  0.2.3.md  0.3.0.md  0.3.1.md  0.4.0.md  0.4.1.md  0.5.0.md  0.6.0.md  0.6.1.md  0.7.0.md  0.8.0.md  0.9.0.md
.changes/unreleased/: Added-20260404-181419.yaml  Added-20260404-181421.yaml  Added-20260404-181422.yaml  Added-20260407-jules-ci-review.yaml  Added-20260408-argo-cd-skill.yaml  Added-20260408-conventional-commits.yaml  Added-20260408-pre-commit.yaml  Added-20260408-sync-dispatch.yaml  Added-20260412-stitch-design-md-skill.yaml  Added-20260416-agent-teams-slash-command.yaml  Added-20260416-zod-skill.yaml  Added-20260419-go-first-cli-mcp.yaml  Added-20260420-102010.yaml  Added-20260420-sops-skill.yaml  Added-20260421-083933.yaml  Added-20260421-agents-md-migration.yaml  Added-20260421-agents-md.yaml  Added-20260426-094307.yaml  Added-20260426-114154.yaml  Added-20260426-send-pr.yaml  Added-20260511-195102.yaml  Added-20260529-225126.yaml  Added-20260529-233716.yaml  Added-20260529-233717.yaml  Added-20260530-120000.yaml  Added-20260530-130000.yaml  Added-20260530-222145-acp-skill.yaml  Added-20260530-231251.yaml  Added-20260531-111644.yaml  Added-20260531-skill-grouping.yaml  Added-20260531102722-skill-grouping-plan.yaml  Added-20260601-203417.yaml  Added-20260621-091000.yaml  Added-20260621-cc-web-setup-skill.yaml  Added-20260621-devcontainer-tests.yaml  Added-21-timeout.yaml  Added-bitwarden-skill.yaml  Added-duckdb-skill.yaml  Added-obsidian-skills.yaml  Added-pixi-skill.yaml  (+56 more)
.claude/: settings.json
.config/: wt.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  setup.sh
.github/workflows/: changelog-check.yml  duckdb-upstream-check.yml  jules-ci-review-dispatch.yml  jules-skills-dispatch.yml  pi-rpc-go.yml  release.yml  skills-validation.yml  skillspector.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  gemini.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/scripts/bash/: update-agent-context.sh
docs/: skills.md
docs/plans/: 2026-05-31-skill-grouping.md
docs/skill-creation/: best-practices.mdx  scripts-languages.mdx  skills-registry.mdx
skills/acp/: SKILL.md
skills/acp/references/: agents.rst  claude-code.rst  clients.rst  examples.rst  protocol.rst
skills/ansible/: SKILL.md
skills/ansible/references/: role-reference.md  role-reference.rst
skills/argo-cd/: SKILL.md
skills/argo-cd/scripts/: install-cli.sh
skills/bitwarden/: SKILL.md
skills/bitwarden/examples/: bw-env-format.env  bw-env.sh  load-github.sh
skills/bitwarden/references/: cli.rst  env-patterns.rst  shell-functions.rst
skills/canvas-design/: SKILL.md
skills/cc-agent-teams/: SKILL.md
skills/cc-agent-teams/references/: examples.md  examples.rst  subagent-vs-team.md  subagent-vs-team.rst
skills/cc-agent-teams/scripts/: check-config.sh
skills/cc-hook/: SKILL.md
skills/cc-hook/examples/: auto-approve-exit-plan.json  auto-format.json  block-rm-rf.json  (+4 more)
skills/cc-hooks/: SKILL.md
skills/cc-web-setup/: SKILL.md
skills/changie/: SKILL.md
skills/charm-tui/: SKILL.md
skills/conventional-commits/: SKILL.md
skills/csv/: SKILL.md  pyproject.toml  requirements.txt
skills/csv/references/: reference.rst
skills/csv/scripts/: excel_to_csv.py  show_missing.py  summary.py  update_row.py  validate.py
skills/csv/tests/: conftest.py  test_placeholder.py
skills/defuddle/: SKILL.md
skills/dispatch/: SKILL.md
skills/document-release/: SKILL.md
skills/docx/: SKILL.md  pyproject.toml  requirements.txt
skills/docx/references/: creating-documents.rst  xml-reference.rst
skills/docx/tests/: conftest.py  test_placeholder.py
skills/duckdb/: SKILL.md  upstream.json
skills/gemini-cli/: SKILL.md
skills/go-gh/: SKILL.md
skills/go-naming/: SKILL.md
skills/go-secure/: SKILL.md
skills/husky/: SKILL.md
skills/json-canvas/: SKILL.md
skills/jules/: SKILL.md
skills/jules-dispatch-creator/: SKILL.md
skills/lefthook/: SKILL.md
skills/lychee/: SKILL.md  lychee.toml
skills/obsidian-bases/: SKILL.md
skills/obsidian-cli/: SKILL.md
skills/obsidian-markdown/: SKILL.md
skills/opencode/: SKILL.md
skills/pdf/: SKILL.md  pyproject.toml  requirements.txt
skills/pdf/references/: reference.rst
skills/pdf/scripts/: check_quality.py  compare_extractors.py  extract_all.py  extract_docling.py  extract_dual.py  extract_tables.py  extract_text.py  merge_tables.py  qa_structural.py
skills/pdf/tests/: conftest.py  test_placeholder.py
skills/pi-rpc/: SKILL.md
skills/pixi/: SKILL.md
skills/pre-commit/: SKILL.md
skills/quarto-alt-text/: SKILL.md
skills/quarto-authoring/: SKILL.md
skills/r-expert/: SKILL.md
skills/r-lib-cli/: SKILL.md
skills/r-lib-cli-app/: SKILL.md
skills/r-lib-cran-extrachecks/: SKILL.md
skills/r-lib-lifecycle/: SKILL.md
skills/r-lib-mirai/: SKILL.md
skills/r-lib-package-dev/: SKILL.md
skills/r-lib-testing/: SKILL.md
skills/report-skill-issue/: SKILL.md
skills/rust-explain/: SKILL.md
skills/send-pr/: SKILL.md
skills/shiny-bslib/: SKILL.md
skills/shiny-bslib-theming/: SKILL.md
skills/skill-review/: SKILL.md
skills/sops/: SKILL.md
skills/sql-review-analyse/: SKILL.md
skills/sql-review-explain/: SKILL.md
skills/starrocks/: SKILL.md
skills/stitch-design-md/: SKILL.md
skills/tdd/: SKILL.md
skills/tdd-team-workflow/: SKILL.md
skills/writerside/: SKILL.md
skills/xlsx/: SKILL.md  pyproject.toml  requirements.txt
skills/xlsx/scripts/: ensure-deps.sh
skills/xlsx/tests/: conftest.py  test_placeholder.py
skills/zod/: SKILL.md
spec/: 21-60s-inactivity-timeout-kills-sessions.md  22-pi-rpc-provider-mismatch.md
tests/: test_devcontainer.py
tests/skills/: test_gemini_cli_reasoning_effort.py  test_jules_dispatch_creator_templates.py
tools/asctl/: go.mod
tools/skillspector/: scan.sh
(+326 files in other folders)
