[project]
authors = [{name = "Rudolf J", email = "r.schnetler@uq.edu.au"}]
dependencies = []
name = "agent-skills"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
agent_skills = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
zensical = ">=0.0.31,<0.0.32"
