[project]
authors = [{name = "Research Data Laboratory", email = "tsv-datalab@health.qld.gov.au"}]
dependencies = [
    "click>=8.0",
    "strictyaml>=1.7.3",
]
name = "agent-skills"
requires-python = ">=3.13,<3.14"
version = "0.1.0"

[project.scripts]
ref = "skills.ref.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/**/*.py", "skills/**/*.py"]
# Legacy Python validator is being replaced by tools/asctl; excluded until deletion.
exclude = ["src/skills/ref/**/*.py"]

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/tests/**/*.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[tool.ruff]
line-length = 100
target-version = "py313"
# src/skills/ref/ is legacy code being replaced by tools/asctl.
extend-exclude = ["src/skills/ref"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length enforced above; let formatter handle

[tool.ruff.lint.per-file-ignores]
# Per-skill CLI scripts use typer/click idioms (function-call defaults, nested
# ifs for exit-code clarity). Enforce E/F/I globally but relax the opinionated
# modernization/simplification rules for script-style code.
"skills/**/*.py" = ["B006", "B007", "B008", "B904", "SIM102", "SIM103", "SIM105", "SIM108", "SIM114", "SIM201", "UP015", "UP017"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
agent_skills = { path = ".", editable = true }

[tool.pixi.tasks]
format = "ruff format ."
lint = "ruff check ."
test = "pytest"
typecheck = "ty check src/"
validate-skills = "python -m skills.ref.repo_check"

[tool.pixi.dependencies]
pytest = ">=7.0"
ruff = ">=0.8.0"
ty = ">=0.0.1a9"
zensical = ">=0.0.31,<0.0.32"
pandoc = ">=3.9.0.2,<4"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
