[project]
name = "csv-skill"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyarrow>=21.0.0",
    "openpyxl>=3.1.5,<4",
    "typer>=0.9.0,<1",
    "rich>=13.0.0,<14",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["scripts/**/*.py"]

[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"
